--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <dimen name="size_0dp">0dp</dimen>
     <dimen name="size_2dp">2dp</dimen>
     <dimen name="size_4dp">4dp</dimen>
+    <dimen name="size_6dp">6dp</dimen>
     <dimen name="size_8dp">8dp</dimen>
     <dimen name="size_12dp">12dp</dimen>
     <dimen name="size_16dp">16dp</dimen>
     <dimen name="size_24dp">24dp</dimen>
     <dimen name="size_36dp">36dp</dimen>
 
+    <dimen name="text_18dp">18sp</dimen>
+    <dimen name="text_14sp">14sp</dimen>
 </resources>
